--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
             <h1>Enjoy Your Favorite Movie 🎬</h1>
             <div class="video-wrapper">
                 <!-- Replace the link below with your movie/streaming link -->
-                <iframe 
-                    src="YOUR_LINK_HERE" 
-                    allow="fullscreen" 
-                    title="Movie Stream">
-                </iframe>
+               <iframe width="640" height="480" src="//mxdrop.to/e/r6xrxkr7tgg1m" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
             </div>
         </section>
     </main>
