--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2024 Watch Together | Created with ❤️ for movie lovers.
+        &copy; 2024 Watch Together | Created with ❤️ for movie lovers developer Basant.
     </footer>
 </body>
 </html>
