--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             <div class="video-wrapper">
              <iframe width="640" height="480" src="//mxdrop.to/e/r6xrrg1oi38v9r" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
         </div>
+
+             <section class="webseries-section">
+        <h2>Web Series</h2>
+        <div class="series-container">
+            <!-- Web Series 1 -->
+            <div class="series-card">
+                <a href="series1.html">
+                    <img src="images/series1.jpg" alt="Series 1">
+                    <h3>Maxton hall the world between us season 1</h3>
+                </a>
+            </div>
         </section>
     
        
