--- a/series1.htm
+++ b/series1.htm
@@ -17,5 +17,7 @@
         <h2>Stream Now e1</h2>
        <iframe width="640" height="480" src="//mxdrop.to/e/xwekkrmdck6dvg" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
     </section>
+    <p> download link is </p>
+    <a href="https://mxdrop.to/f/el8kkpgjter4z4"> download all episode </a>
 </body>
 </html>
