--- a/series1.html
+++ b/series1.html
@@ -16,6 +16,16 @@
     <section class="embed-section">
         <h2>Stream Now</h2>
        <iframe width="640" height="480" src="//mxdrop.to/e/xwekkrmdck6dvg" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+   <h3>e2</h3>
+        <iframe width="600" height="480" src="//mxdrop.to/e/q18nnjwpu6elmk" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+    <h4>e3</h4>
+        <iframe width="600" height="480" src="//mxdrop.to/e/9wprregqfj63vd" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+        <h5>e4</h5>
+        <iframe width="600" height="480" src="//mxdrop.to/e/9wprre93t1rx61" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+        <h6>e5</h6>
+        <iframe width="600" height="480" src="//mxdrop.to/e/el8kk38vb78e9g" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+        <h7>e7</h7>
+        <iframe width="600" height="480" src="//mxdrop.to/e/gjzwwvjvhww3g91" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
     </section>
 </body>
 </html>
