--- a/series1.html
+++ b/series1.html
@@ -27,5 +27,6 @@
         <h7>e7</h7>
         <iframe width="600" height="480" src="//mxdrop.to/e/gjzwwvjvhww3g91" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
     </section>
+    <a href="https://mxdrop.to/f/el8kkpgjter4z4"> download all episode </a>
 </body>
 </html>
