--- a/series2.html
+++ b/series2.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Series Name 1</title>
+    <title>FROM SERIES</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <h1>maxton hall the war between us </h1>
+        <h1>FROM season1 </h1>
     </header>
 
     <!-- Embedded Video -->
     <section class="embed-section">
-        <h2>Stream Now e1</h2>
-       <iframe width="640" height="480" src="//mxdrop.to/e/xwekkrmdck6dvg" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
-    </section>
+        <h2>Stream Now enjoy!!!</h2>
+       <iframe width="600" height="480" src="//mxdrop.to/e/wlj391rwsv8m6v" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+   <iframe width="600" height="480" src="//mxdrop.to/e/mkv7jmgvtxxe9z7" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/q18j74jxflz6dv" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/pj8w0rdqfxd0q8" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/9wpep4p4unkv94" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/mkv7vj88b66dnd" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/gjzrzmkgid9pdr" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/r6x1xvpwcv8d1go" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/036e64v1t3qjr8" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+<iframe width="600" height="480" src="//mxdrop.to/e/4dkeko48fqqg0v4" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+
+   </section>
     <p> download link is </p>
-    <a href="https://mxdrop.to/f/el8kkpgjter4z4"> download all episode </a>
+    <a href="https://0.cha313.workers.dev/f0adca67629ff623ac9da4107d48ea46/workerseed.dev/From.S01.1080p.10Bit.Hindi.English.Esubs.MoviesMod.org.zip"> download all episode </a>
 </body>
 </html>
