--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <img src="images/series 1.jpg" alt="Series 1">
                     <h3>Maxton hall the world between us season 1</h3>
                 </a>
+                <a href="series2.html">
+                    <img src="image/series 2.jpg" alt="series 2">
+                  <h4> FROM SEASON 1 </h4>  
+                </a>
             </div>
         </section>
     
