--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h3>Maxton hall the world between us season 1</h3>
                 </a>
                 <a href="series2.html">
-                    <img src="image/series 2.jpg" alt="series 2">
+                    <img src="images/MV5BYzM5ZWMxOGEtZjEyMC00YjQ0LThiYjEtZjVkZGEzN2NlOGEwXkEyXkFqcGc@.webp" alt="series 2">
                   <h4> FROM SEASON 1 </h4>  
                 </a>
             </div>
